# Langchain_graph_tutorial

./: Advanced_Retrieval_with_LangChain_Assignment (1).ipynb  Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Fine_tuning_Embedding_Models_for_RAG_Solution_Notebook.ipynb  Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  LangSmith_and_Evaluation.ipynb  Multi_Agent_RAG_LangGraph.ipynb  Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment_completed.ipynb  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json  hello.py  john_wick_kg.json  pyproject.toml
