[project]
name = "langchain-graph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.13.3",
    "cohere>=5.13.11",
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.69",
    "langsmith>=0.3.5",
    "lxml>=5.3.0",
    "openai>=1.61.0",
    "qdrant-client>=1.13.2",
    "tiktoken>=0.8.0",
]
