[project]
name = "langchain-graph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "ace-tools>=0.0",
    "ace-tools-open>=0.1.0",
    "arxiv>=2.1.3",
    "beautifulsoup4>=4.13.3",
    "cohere>=5.13.11",
    "faiss-cpu>=1.10.0",
    "grandalf>=0.8",
    "huggingface-hub==0.27.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.17",
    "langchain-cohere>=0.4.2",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.69",
    "langsmith>=0.3.5",
    "lxml>=5.3.0",
    "matplotlib>=3.10.1",
    "openai>=1.61.0",
    "pandas>=2.2.3",
    "qdrant-client>=1.13.2",
    "ragas>=0.2.13",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.12.1",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "whoami>=2.1.8",
]
